@@ -179,6 +179,9 @@
 
       \item \code{aspell()} gains a filter for Markdown (\file{.md} and
       \file{.Rmd}) files.
+
+      \item \code{intToUtf8(multiple = FALSE)} gains an argument to
+      allow surrogate pairs to be interpreted.
     }
   }
 
@@ -360,11 +363,16 @@
   }
   \subsection{BUG FIXES}{
     \itemize{
-      \item \code{raw(0) & raw(0)} again returns \code{raw(0)} (rather
-      than \code{logical(0)}; ditto for \code{|}.
+      \item \code{raw(0) & raw(0)} and \item \code{raw(0) | raw(0)}
+      again return \code{raw(0)} (rather than \code{logical(0)}).
 
       \item \code{intToUtf8()} converts integers corresponding to
-      surrogate code points to \code{NA} rather than invalid UTF-8.
+      surrogate code points to \code{NA} rather than invalid UTF-8, as
+      well as values larger than the current Unicode maximum of
+      \code{0x10FFFF}.
+      
+      \item Fix calling of methods on S4 generics that dispatch on
+      \code{\dots} when the call contains \code{\dots}.
     }
   }
 }
